# pluto

./: .env.example  .gitignore  Makefile  README.md  index.html  package-lock.json  package.json  pyproject.toml  requirements.txt  test_fake_plaid.py  vite.config.ts
app/: config.py  deps.py  main.py
app/ai/: insights.py
app/api/: fake_plaid.py
app/core/: security.py
app/db/: init_db.py  session.py
app/models/: account.py  gemini_insight.py  transaction.py  user.py
app/routers/: accounts.py  auth.py  insights.py  transactions.py  users.py
app/schemas/: account.py  auth.py  insight.py  plaid_fake.py  transaction.py  user.py
app/services/: fake_plaid.py
src/: App.tsx  index.css
src/components/: AIChatbot.tsx  Dashboard.tsx  IncomeDashboard.tsx  InvestmentsDashboard.tsx  LoginPage.tsx  PlutoLogo.tsx  PlutoLogoImage.tsx  SavingsDashboard.tsx  SavingsInvestmentsDashboard.tsx  SettingsDashboard.tsx  SpendingDashboard.tsx  TransactionsDashboard.tsx
src/components/ui/: chart.tsx
src/styles/: globals.css
