[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pluto-api"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "fastapi==0.111.0",
  "uvicorn[standard]==0.30.3",
  "SQLAlchemy==2.0.30",
  "psycopg2-binary==2.9.9",
  "pydantic==2.7.4",
  "passlib[bcrypt]==1.7.4",
  "python-jose==3.3.0",
]

[tool.ruff]
line-length = 100
